# mini-shell-C-programming

./: README.md
mini-shell/: CMakeLists.txt  Makefile  QUICKSTART.md  README2.md  ai_worker.c  ai_worker.c.backup  ai_worker_backup.c  main.c  mini-shell  mistake.txt  sandbox.c  seccomp_filter.c  shell.c  shell.h  stress_test.sh  test_assist.sh  verify_model.sh
